# osmosis_simulation_ws

./: .gitignore
src/osmosis_simulation/: CMakeLists.txt  package.xml
src/osmosis_simulation/launch/: summit_xl_simulation.launch
src/osmosis_simulation/models/: airport.dae  osmosis_objects  summit_xl.world
src/summit_xl_common/summit_xl_control/config/: summit_xl_a_control.yaml
src/summit_xl_common/summit_xl_description/robots/: summit_xl_std.urdf.xacro
src/summit_xl_common/summit_xl_description/urdf/bases/: summit_xl_base.gazebo.xacro
src/summit_xl_sim/summit_xl_gazebo/launch/: summit_xl_gazebo.launch
